--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
+    "jp.ayutaz.simplefoldericon": "1.3.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
